# rust-rl

./: .gitignore  .gitmodules  CONFIG.toml  Cargo.toml  README.md  cachegrind.out  callgrind.out  notes  perf.data  perf.data.old
blueprints/: base_object.ron  player.ron
blueprints/creatures/: base_creature.ron  base_monster.ron  human.ron
blueprints/terrain/: base_floor.ron  base_wall.ron
src/: bodyparts.rs  command.rs  components.rs  config.rs  ecs.rs  entities.rs  entity_factory.rs  game_window.rs  input.rs  main.rs  map.rs  prelude.rs  render.rs  systems.rs  time.rs
src/components/: flags.rs
src/components/flags/: requests.rs
src/systems/: action.rs  actor_setup.rs  ai.rs  attack.rs  combat.rs  control.rs  debug.rs  initiative.rs  input.rs  mapgen.rs  movement.rs  naming.rs  render.rs  render_old.rs  stats.rs  time.rs
src/systems/ai/: pathfinding.rs  thinking.rs  types.rs
src/systems/ai/types/: monster.rs
src/systems/mapgen/: algorithms.rs
