[package]
name = "specsrl"
version = "0.1.0"
authors = ["Ian Sly <iansly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = "0.15.0"
specs = "0.15.0"
specs-derive = "0.4.0"
shrev = "1.1.1"
shred = "0.9.2"
shred-derive = "0.6.1"
rand = "0.7.0"
array2d = "0.2.1"
rouler = "0.1.3"
# num = "0.2.0"
# serde_json = "1.0"
# rltk = { git = "https:Z(//github.com/thebracket/rltk_rs" }

[features]
default = ["specs/nightly", "specs/specs-derive"]

