[package]
name = "rust-rl"
version = "0.1.0"
authors = ["Ian Sly <iansly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = "0.15.0"
specs = "0.15.1"
specs-derive = "0.4.0"
shred = "0.9.3"
shred-derive = "0.6.1"
shrev = "1.1.1"
rand = "0.7.2"
array2d = "0.2.1"
rltk = { path = "rltk" }
log = "0.4.8"
env_logger = "0.7.0"
# rltk = { git = "https://github.com/thebracket/rltk_rs" }

[features]
default = ["specs/nightly", "specs/specs-derive"]
